sass files updated

--- a/rc03_sass/src/scss/footer.module.scss
+++ b/rc03_sass/src/scss/footer.module.scss
@@ -1,5 +1,14 @@
 @import './variables';
 
-footer{
-    background-color: $lightPink;
+footer {
+  background-color: $darkPink;
+  padding: 1rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  .title {
+    color: white;
+    text-align: center;
+  }
 }
